Attempt to use a custom tag in the front matter of pre-existing posts

--- a/src/misc/index.json.njk
+++ b/src/misc/index.json.njk
@@ -6,7 +6,8 @@ permalink: "/index.json"
     {
         "url": "{{ post.url | url }}",
         "title": "{{ post.data.title }}",
-        "date": "{{ post.data.page.date | readableDate }}"
+        "date": "{{ post.data.page.date | readableDate }}",
+        "stagger": "{{post.data.stagger}}"
     }{% if not loop.last %},{% endif %}
     {% endfor %}
 ]
