--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -5,12 +5,13 @@ layout: default
 <article class="max-w-5xl mx-auto">
     <header class="mb-14">
         <h1 class="text-3xl text-center font-bold leading-normal text-gray-900 mt-0 mb-3">{{ title }}</h1>
-        <div class="text-center">Published on {{ page.date | readableDate }}</div>
+        <div class="text-center">VPublished on {{ page.date | readableDate }}{% if stagger %}{{ stagger }}{% endif %}</div>
         {% if tags %}
         <div class="mt-3 text-center">
             {% for tag in tags %}
             <a href="{{ '/tags/' | url }}{{ tag }}" class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-medium text-gray-700 m-0.5">#{{ tag }}</a>
             {% endfor %}
+            <span class="inline-block bg-teal-200 rounded-full px-5 py-1 text-sm font-medium text-gray-900 m-0.5">stagger:{{ stagger }}</span>
         </div>
         {% endif %}
         {% if thumb %}
