Implement keymap searching with search qualifiers

--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -13,7 +13,7 @@ layout: default
     </header>
     <div id="content" class="prose text-gray-800 max-w-none">
         <ul>
-        <li>url: <a href={{ url }}>{{ url }}</a></li>
+        <li>url: <a href={{ keymap_url }}>{{ keymap_url }}</a></li>
         <li>author: {{ keymap_author }}</li>
         <li>image: <a href={{ thumb }}>{{ thumb }}</a></li>
         <li>keyCount: {{ keyCount }}</li>
