--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,5 +1,5 @@
 <header id="header" class="header-shadow bg-white px-6 py-5 z-50 fixed w-full top-0 transition-all transform ease-in-out duration-500">
-    <div class="max-w-5xl mx-auto flex items-center flex-wrap justify-between">
+    <div class="mx-auto flex items-center flex-wrap justify-between">
         <div class="sm:mr-8">
             <a class="flex items-center" href="{{ '/' | url }}">
                 <span class="text-xl text-teal-700 font-semibold self-center">{{ site.title }}</span>
