Use noUiSlider-15.5.1 for 2-sided sliders

--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -1,7 +1,7 @@
 {% from "macros/yes-no-switch-field.njk" import YesNo %}
 
 Key Count:
-<input type="range" max="100" value="70" class="range range-accent">
+<div class="slider-styled" id="keyCountSlider"></div>
 
 <br>
 
@@ -138,7 +138,7 @@ Letter(s) on thumb:
 <br>
 
 Layer Count:
-<input type="range" max="32" value="4" class="range range-accent">
+<div class="slider-styled" id="layerCountSlider"></div>
 
 <br>
 
