--- a/src/misc/bundle.js.njk
+++ b/src/misc/bundle.js.njk
@@ -4,5 +4,7 @@ permalink: "/assets/js/bundle.js"
 {% set js %}
 {% include "../assets/js/main.js" %}
 {% include "../assets/js/search.js" %}
+{% include "../assets/js/nouislider.min.js" %}
+{% include "../assets/js/dualSlidersConf.js" %}
 {% endset %}
 {{ js | minifyJs | safe }}
