--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -38,6 +38,7 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">
+    <link rel="stylesheet" href="{{ '/assets/css/nouislider.min.css' | url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
 </head>	
 
