--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -2,11 +2,13 @@
 
 Key Count:
 <div class="slider-styled" id="keyCountSlider"></div>
+<br>
+<input type="number" min="1" max="120" step="1" value="10">
 
 <br>
 
-Firmware:
 <div class="flex flex-col">
+Firmware:
     <label class="inline-flex mt-3">
         <input type="radio", name="firmware", class="form-radio h-5 w-5 text-blue-500 border-gray-300 transition duration-100 ease-in-out shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500 focus:outline-none focus:ring-opacity-50 focus:ring-offset-0  disabled:opacity-50 disabled:cursor-not-allowed"><span class="ml-2 text-gray-700">QMK</span>
     </label>
@@ -104,7 +106,7 @@ Split:
 <br>
 
 <label class="block text-left" style="max-width: 300px">
-  Language(s):
+  Language(s): (Ctrl+Click to select more than one)
   <select class="form-multiselect block w-full mt-1" style="border-width: 2px" multiple>
     <option>English</option>
     <option>French</option>
