--- a/src/tags.njk
+++ b/src/tags.njk
@@ -6,7 +6,7 @@ permalink: "tags/index.html"
 
 <h1 class="text-3xl leading-normal font-bold mt-0 mb-7 text-center">{{ title }}</h1>
 <div class="flex justify-center flex-wrap">
-    {% for field in db_fields.fields %}
+    {% for field in db_fields %}
     <a href="{{ '/tags/' | url }}{{ name }}" class="inline-block mx-1 mb-3 px-4 py-2 bg-gray-200 text-gray-700 font-medium rounded-full">
         {{ field }}
     </a>
