--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -127,7 +127,7 @@ OS:
             <input type="checkbox" class="form-checkbox h-5 w-5 text-gray-600"><span class="ml-2 text-gray-700">MacOS</span>
         </label>
         <label class="inline-flex items-center mt-3">
-            <input type="checkbox" class="form-checkbox h-5 w-5 text-gray-600"><span class="ml-2 text-gray-700">GNU+Linux</span>
+            <input type="checkbox" class="form-checkbox h-5 w-5 text-gray-600"><span class="ml-2 text-gray-700">Linux</span>
         </label>
     </div>
 </div>
