--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -14,9 +14,9 @@ layout: default
             <span class="inline-block bg-teal-200 rounded-full px-5 py-1 text-sm font-medium text-gray-900 m-0.5">stagger:{{ stagger }}</span>
         </div>
         {% endif %}
-        {% if thumb %}
+        {% if keymap_image %}
         <div class="mt-10 -mx-7 md:mx-0">
-            <img class="w-full max-w-2xl mx-auto" src="{{ thumb | url }}" width="960" height="500" alt="{{ keymap_author }}'s keymap for the {{ keyboard }}">
+            <img class="w-full max-w-2xl mx-auto" src="{{ keymap_image | url }}" width="960" height="500" alt="{{ keymap_author }}'s keymap for the {{ keyboard }}">
         </div>
         {% endif %}
     </header>
