--- a/src/misc/bundle.js.njk
+++ b/src/misc/bundle.js.njk
@@ -6,5 +6,6 @@ permalink: "/assets/js/bundle.js"
 {% include "../assets/js/search.js" %}
 {% include "../assets/js/nouislider.js" %}
 {% include "../assets/js/dualSlidersConf.js" %}
+{% include "../assets/js/sidebarFilters.js" %}
 {% endset %}
 {{ js | minifyJs | safe }}
