--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -2,6 +2,7 @@
 
 <fieldset>
     <legend>Key Count</legend>
+    <!-- "bug" report: selecting a slider handle with the mouse cursor and releasing the mouse button outside of the slider's area does not call updateUrlSearchParams -->
     <div onkeyup="updateUrlSearchParams(this)" onclick="updateUrlSearchParams(this)" class="slider-styled" name="keyCount" id="keyCountSlider"></div>
     <br>
     <input type="number" min="1" max="120" step="1" value="10">
