Show all the filtered keymaps in the post grid
No paging support but that's a start

--- a/src/index.njk
+++ b/src/index.njk
@@ -11,7 +11,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
     <aside class="h-screen top-0" style="height:min-content;width: 300px;margin-right: 45px;">
         {% include "partials/sidebar.njk" %}
     </aside>
-    <div class="flex flex-wrap -mx-2">
+    <div id="post-grid" class="flex flex-wrap -mx-2">
     {% include "partials/post-grid.njk" %}
     </div>
 </div>
