--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -20,7 +20,7 @@ layout: default
         <li>firmware: {{ firmware }}</li>
         <li>keyboard: {{ keyboard }}</li>
         <li>stagger: {{ stagger }}</li>
-        <li>split: {{ split }}</li>
+        <li>split: {{ isSplit }}</li>
         <li>languages: {{ languages }}</li>
         <li>name: {{ title }}</li>
         <li>summary: {{ summary }}</li>
