--- a/src/_includes/macros/post-card.njk
+++ b/src/_includes/macros/post-card.njk
@@ -8,7 +8,7 @@
             <div class="font-semibold text-lg mb-2">
                 <a class="text-gray-900 hover:text-gray-700" href="{{ post.url | url }}">{{ post.data.title }}</a>
             </div>
-            <p class="text-gray-700 mb-1">{{ post.data.stagger }} stagger, {{ post.data.keyCount }} keys, {% if post.data.split == false %}non-{% endif %}split</p>
+            <p class="text-gray-700 mb-1">{{ post.data.stagger }} stagger, {{ post.data.keyCount }} keys, {% if post.data.isSplit == false %}non-{% endif %}split</p>
             <p class="text-gray-800">
                 {% if post.data.description %}
                 {{ post.data.description }}
