--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -163,3 +163,7 @@
 <br>
 
 {{ YesNo("Home row mods", "hasHomeRowMods") }}
+
+<br>
+
+<button onclick="resetSidebarFilters()" class="float-left bg-white font-semibold py-2 px-4 border rounded shadow-md text-gray-800 cursor-default text-opacity-75">Reset filters</button>
