--- a/src/_includes/macros/yes-no-switch-field.njk
+++ b/src/_includes/macros/yes-no-switch-field.njk
@@ -1,3 +1,4 @@
+<!-- TODO: Visually highlight the "selected" (but not checked yet) option when tabbing through the switch field -->
 {% macro YesNo(legend, dbFieldName) %}
 <fieldset class="switch-field">
     <legend>{{ legend }}</legend>
