--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -33,11 +33,11 @@
     <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
     <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.png' | url }}">
     <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">
+    {#<link rel="dns-prefetch" href="https://fonts.googleapis.com">#}
+    {#<link rel="preconnect" href="https://fonts.googleapis.com">#}
+    {#<link rel="dns-prefetch" href="https://fonts.gstatic.com">#}
+    {#<link rel="preconnect" href="https://fonts.gstatic.com">#}
+    {#<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">#}
     <link rel="stylesheet" href="{{ '/assets/css/nouislider.css' | url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
 </head>	
