--- a/src/index.njk
+++ b/src/index.njk
@@ -11,8 +11,12 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
     <aside id="sidebar" class="h-screen top-0" style="height:min-content;width: 300px;margin-right: 45px;">
         {% include "partials/sidebar.njk" %}
     </aside>
-    <div id="post-grid" class="flex flex-wrap -mx-2">
-    {% include "partials/post-grid.njk" %}
+    <div class="flex-col">
+        {% set offset =  (paged.number - 1) * site.paginate %}
+        <div id="showing-n-results" class="text-center mb-5 mx-auto text-lg text-gray-600">Showing {{ offset + 1 }} to {{ offset + site.paginate }} of {{ collections.posts | length }} results found</div>
+        <div id="post-grid" class="flex flex-wrap -mx-2">
+        {% include "partials/post-grid.njk" %}
+    </div>
     </div>
 </div>
 
