--- a/src/_includes/partials/keymaps-metadata.json.njk
+++ b/src/_includes/partials/keymaps-metadata.json.njk
@@ -1,13 +1,11 @@
----
-permalink: "/index.json"
----
 [
-    {% for post in collections.posts %}
+    {%- for post in collections.posts %}
     {
+
         "url": {{ post.url | url | dump | safe }},
-        {% for field in db_fields %}
+        {% for field in db_fields -%}
         "{{ field }}": {{ post.data[field] | dump | safe }}{% if not loop.last %},{% endif %}
         {% endfor %}
     }{% if not loop.last %},{% endif %}
-    {% endfor %}
+    {%- endfor %}
 ]
